--- a/app/src/main/res/drawable/round_border.xml
+++ b/app/src/main/res/drawable/round_border.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
-        android:color="#2196F3"
+        android:color="@color/colorPrimary"
         android:width="1dp"/>
-    <corners android:radius="100dp"/>
+    <corners android:radius="10dp"/>
 
 </shape>
