--- a/app/src/main/res/layout/activity_trangchu__admin.xml
+++ b/app/src/main/res/layout/activity_trangchu__admin.xml
@@ -52,15 +52,22 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="525dp"
+                    android:layout_height="match_parent"
                     android:orientation="horizontal">
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recycle_category"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-
                         android:layout_weight="5" />
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycle_product"
+                        android:layout_width="0dp"
+                        android:layout_weight="15"
+                        android:layout_marginLeft="2dp"
+                        android:layout_marginRight="2dp"
+                        android:layout_height="wrap_content" />
+
 
                 </LinearLayout>
 
