--- a/app/src/main/res/layout/lv_category.xml
+++ b/app/src/main/res/layout/lv_category.xml
@@ -6,7 +6,7 @@
     android:layout_gravity="center"
     android:orientation="vertical">
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content" >
 
         <LinearLayout
