--- a/app/src/main/res/layout/recyclerview_model.xml
+++ b/app/src/main/res/layout/recyclerview_model.xml
@@ -20,8 +20,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:background="@drawable/round_border"
-            android:layout_height="170dp">
+            android:layout_height="170dp"
+            android:background="@drawable/round_border">
 
             <ImageView
                 android:id="@+id/imageRecyclerview"
@@ -60,6 +60,19 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvPriceRecycler" />
+
+            <TextView
+                android:id="@+id/discountPriceS"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/round_btn_bg"
+                android:padding="5dp"
+                android:text="10% OFF"
+                android:textColor="#0373F3"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
