--- a/app/src/main/res/layout/customdialog.xml
+++ b/app/src/main/res/layout/customdialog.xml
@@ -2,76 +2,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="15dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="53dp"
-            android:text="Nhập mật khẩu cũ: "
-            android:textColor="#000"
-            android:textSize="20dp"
-            android:layout_marginTop="10dp"/>
 
-        <EditText
-            android:id="@+id/mkc"
-            android:layout_marginTop="10dp"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="43dp"
-            android:imeOptions="actionDone"
-            android:padding="10dp"
-            android:password="true"
-            android:singleLine="true" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true"
+             >
 
-        <TextView
-            android:layout_width="175dp"
-            android:layout_height="53dp"
-            android:layout_marginTop="10dp"
-            android:text="Nhập mật khẩu mới: "
-            android:textColor="#000"
-            android:textSize="20dp" />
+            <EditText
+                android:id="@+id/mkc"
+                android:layout_width="match_parent"
+                android:layout_height="43dp"
+                android:layout_marginTop="10dp"
+                android:imeOptions="actionDone"
+                android:padding="10dp"
+                android:hint="Nhập mật khẩu cũ"
+             />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <EditText
-            android:id="@+id/mkm"
-            android:layout_marginTop="10dp"
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="43dp"
-            android:imeOptions="actionDone"
-            android:padding="10dp"
-            android:password="true"
-            android:singleLine="true" />
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+            <EditText
+                android:id="@+id/mkm"
+                android:layout_width="match_parent"
+                android:layout_height="43dp"
+                android:layout_marginTop="10dp"
+                android:imeOptions="actionDone"
+                android:padding="10dp"
+                android:hint="Nhập mật khẩu mới"
+           />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:layout_width="178dp"
-            android:layout_height="53dp"
-            android:layout_marginTop="10dp"
-            android:text="Nhập lại mật khẩu mới: "
-            android:textColor="#000"
-            android:textSize="20dp" />
 
-        <EditText
-            android:id="@+id/nmkm"
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="43dp"
-            android:imeOptions="actionDone"
-            android:padding="10dp"
-            android:password="true"
-            android:singleLine="true" />
-    </LinearLayout>
 </LinearLayout>
