--- a/app/src/main/res/layout/lv_category.xml
+++ b/app/src/main/res/layout/lv_category.xml
@@ -6,8 +6,8 @@
     android:layout_gravity="center"
     android:orientation="vertical">
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_width="100dp"
+        android:layout_height="120dp" >
 
         <LinearLayout
             android:layout_width="wrap_content"
