--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -4,10 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Detail_product"
+    tools:context=".QuanLySanPham.Detail_product"
     android:orientation="vertical">
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -31,11 +29,13 @@
                         android:layout_height="match_parent"
                         android:padding="4dp"
                         android:src="@drawable/product1" />
+
                     <ImageView
                         android:layout_width="190dp"
                         android:layout_height="match_parent"
                         android:padding="4dp"
                         android:src="@drawable/product1" />
+
                     <ImageView
                         android:layout_width="190dp"
                         android:layout_height="match_parent"
@@ -49,10 +49,6 @@
                 </LinearLayout>
             </HorizontalScrollView>
         </LinearLayout>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -148,7 +144,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="Sản phẩm 100% chất liệu coton, thoáng mát, thời trang và năng động"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:paddingBottom="30px"/>
         </LinearLayout>
         <TextView
             android:layout_width="match_parent"
@@ -160,17 +157,16 @@
 
     </LinearLayout>
 
-</ScrollView>
-
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="40dp"
-            android:layout_weight="0.4"
+            android:layout_weight="1"
             android:gravity="center"
             android:orientation="horizontal">
             <Button
+                android:id="@+id/btnSuaSanPham"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
@@ -181,6 +177,7 @@
                 android:textSize="25dp"
                 android:textStyle="bold" />
             <Button
+                android:id="@+id/btnXoaSanPham"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
