--- a/app/src/main/res/drawable/round_border.xml
+++ b/app/src/main/res/drawable/round_border.xml
@@ -5,6 +5,7 @@
     <stroke
         android:color="@color/colorPrimary"
         android:width="1dp"/>
-    <corners android:radius="10dp"/>
+    <corners
+        android:radius="10dp"/>
 
 </shape>
