--- a/app/src/main/res/layout/activity_trangchu__admin.xml
+++ b/app/src/main/res/layout/activity_trangchu__admin.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -35,87 +34,116 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="11">
+            android:layout_weight="11"
+            android:background="@drawable/bgcolor_left">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
-               <LinearLayout
-                   android:id="@+id/linearSearch"
-                   android:layout_width="match_parent"
-                   android:layout_height="0dp"
-                   android:layout_weight="3"
-                   android:orientation="horizontal">
-                   <EditText
-                       android:id="@+id/edtSearchFilter"
-                       android:background="@drawable/round_border"
-                       android:drawableStart="@drawable/search"
-                       android:layout_width="0dp"
-                       android:layout_weight="10"
-                       android:layout_height="50dp"
-                       android:hint="Tìm kiếm sản phẩm"
-                       android:padding="10dp"
-                       android:layout_margin="10dp"
-                       android:drawableLeft="@drawable/search"
-                       />
-                   <ImageButton
-                       android:id="@+id/imgBtnCateRight"
-                       android:layout_width="wrap_content"
-                       android:layout_weight="1"
-                       android:layout_gravity="center_vertical"
-                       android:layout_height="50dp"
-                       android:scaleType="fitXY"
-                       android:background="@null"
-                       android:src="@drawable/ic_action_category"/>
-               </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-                    <TextView
-                        android:id="@+id/filterProduct"
-                        android:layout_marginBottom="5dp"
-                        android:layout_width="wrap_content"
-                        android:text="Tất cả sản phẩm"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:textColor="#000"
-                        android:textStyle="bold|italic"
-                        />
-                </LinearLayout>
-                <LinearLayout
+                <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="14"
-                    android:orientation="horizontal"
-                  >
+                    android:layout_height="match_parent">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="3"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:id="@+id/linearSearch"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="2"
+                            android:orientation="horizontal">
+
+                            <EditText
+                                android:id="@+id/edtSearchFilter"
+                                android:layout_width="0dp"
+                                android:layout_height="50dp"
+                                android:layout_margin="10dp"
+                                android:layout_weight="10"
+                                android:background="@drawable/round_border"
+                                android:drawableStart="@drawable/search"
+                                android:drawableLeft="@drawable/search"
+                                android:hint="Tìm kiếm sản phẩm"
+                                android:padding="10dp" />
+
+                            <ImageButton
+                                android:id="@+id/imgBtnCateRight"
+                                android:layout_width="wrap_content"
+                                android:layout_height="50dp"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginTop="-5dp"
+                                android:layout_weight="1"
+                                android:background="@null"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/ic_action_category" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/filterProduct"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="5dp"
+                                android:layout_marginBottom="5dp"
+                                android:text="Tất cả sản phẩm"
+                                android:textColor="#000"
+                                android:textStyle="bold|italic" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_marginTop="-30dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="14"
+                        android:orientation="horizontal">
 
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recycle_category"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="5" />
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recycle_product"
-                        android:layout_width="0dp"
-                        android:layout_weight="15"
-                        android:layout_marginLeft="2dp"
-                        android:layout_marginRight="2dp"
-                        android:layout_height="wrap_content" />
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recycle_category"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="5"
+                            android:background="#E2F8A5"
+                            android:paddingBottom="5dp" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recycle_product"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="2dp"
+                            android:layout_marginRight="2dp"
+                            android:layout_weight="15"
+                            android:paddingBottom="5dp" />
 
 
-                </LinearLayout>
+                    </LinearLayout>
+                    </LinearLayout>
 
+                </ScrollView>
             </LinearLayout>
 
             <FrameLayout
                 android:id="@+id/fragment_bot_menu"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/floatingButton"
                     android:layout_width="wrap_content"
