--- a/app/src/main/res/layout/recyclerview_model.xml
+++ b/app/src/main/res/layout/recyclerview_model.xml
@@ -13,15 +13,17 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="4dp"
         app:cardElevation="10dp"
-        app:contentPadding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:cardCornerRadius="10dp"
+       >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="170dp"
-            android:background="@drawable/round_border">
+            android:background="@drawable/round_border"
+            >
 
             <ImageView
                 android:id="@+id/imageRecyclerview"
