--- a/app/src/main/res/layout/write_review_layout.xml
+++ b/app/src/main/res/layout/write_review_layout.xml
@@ -26,17 +26,29 @@
 
     <ImageView
         android:layout_margin="30dp"
-        android:layout_width="178dp"
-        android:layout_height="114dp"
-        android:layout_gravity="center"
-        android:src="@drawable/logo" />
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/ic_baseline_hinh_anh_sp" />
+
+    <TextView
+        android:id="@+id/tvProductName"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/txtProductName"
+        android:layout_gravity="center_horizontal"
+        android:textSize="20sp"/>
 
     <TextView
         android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="@string/txtReview"
-        android:gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal" />
 
     <RatingBar
         android:id="@+id/ratingBar"
@@ -49,9 +61,19 @@
         android:id="@+id/edtWriteReview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/bg_write_review"
         android:layout_marginTop="20dp"
         android:gravity="top"
-        android:padding="20dp"
-        android:minHeight="100dp"/>
+        android:padding="10dp"
+        android:minHeight="100dp"
+        android:layout_margin="20dp"
+        android:hint="Nhập dánh giá..."/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnReview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/ic_baseline_done"/>
 
 </LinearLayout>
