--- a/app/src/main/res/layout/chatlist.xml
+++ b/app/src/main/res/layout/chatlist.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout4
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="107dp"
-        android:layout_height="56dp"
-        android:src="@drawable/user"
-        />
+        android:id="@+id/image"
+        android:layout_width="74dp"
+        android:layout_height="57dp"
+        android:src="@drawable/user" />
 
     <LinearLayout
         android:layout_width="347dp"
@@ -29,4 +30,4 @@
             android:textSize="20dp" />
 
     </LinearLayout>
-</LinearLayout>
+</LinearLayout4>
