--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,8 @@
     <color name="profile_desc">#D1D1FF</color>
     <color name="bg_meta_container">#000000</color>
     <color name="profile_default_tint">#e0e0e0</color>
+
+  
+    <color name="colorRed">#FF0000</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
